# remux

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  PROJECTS.md  Package.swift  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  SECURITY.md  SPEC.md  THIRD_PARTY_LICENSES.md  TODO.md  build.mjs  ecosystem.config.cjs  freezecheck-tab2-inspect.yaml  package-lock.json  package.json  playwright.config.ts  (+21 more)
apps/macos/ghostty/: .prettierignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  HACKING.md  README.md  build.zig  build.zig.zon  build.zig.zon.json  build.zig.zon.nix  build.zig.zon.txt  flake.nix  typos.toml
apps/macos/ghostty/.github/: VOUCHED.td
apps/macos/ghostty/.github/workflows/: flatpak.yml  nix.yml  release-tag.yml  release-tip.yml  snap.yml  test.yml  update-colorschemes.yml  vouch-check-issue.yml  vouch-check-pr.yml  vouch-manage-by-discussion.yml  vouch-manage-by-issue.yml  vouch-sync-codeowners.yml
apps/macos/ghostty/example/: .gitignore  README.md
apps/macos/ghostty/example/c-vt/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-build-info/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-cmake/: CMakeLists.txt  README.md
apps/macos/ghostty/example/c-vt-cmake-static/: CMakeLists.txt  README.md
apps/macos/ghostty/example/c-vt-colors/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-effects/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-encode-focus/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-encode-key/: README.md  build.zig
apps/macos/ghostty/example/c-vt-encode-mouse/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-formatter/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-grid-traverse/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-modes/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-paste/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-render/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-sgr/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-size-report/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-static/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/c-vt-stream/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/cpp-vt-stream/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/wasm-key-encode/: README.md  index.html
apps/macos/ghostty/example/wasm-sgr/: README.md  index.html
apps/macos/ghostty/example/wasm-vt/: README.md  index.html
apps/macos/ghostty/example/zig-formatter/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/zig-vt/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/example/zig-vt-stream/: README.md  build.zig  build.zig.zon
apps/macos/ghostty/flatpak/: com.mitchellh.ghostty-debug.yml  com.mitchellh.ghostty.yml  dependencies.yml  zig-packages.json
apps/macos/ghostty/include/: ghostty.h
apps/macos/ghostty/include/ghostty/: vt.h
apps/macos/ghostty/macos/: .swiftlint.yml  Ghostty-Info.plist  Ghostty.sdef  build.nu
apps/macos/ghostty/macos/Ghostty.xcodeproj/: project.pbxproj
apps/macos/ghostty/macos/GhosttyUITests/: AppKitExtensions.swift  GhosttyCommandPaletteTests.swift  GhosttyCustomConfigCase.swift  GhosttyMouseStateTests.swift  GhosttyThemeTests.swift  GhosttyTitleUITests.swift  GhosttyTitlebarTabsUITests.swift  GhosttyWindowPositionUITests.swift
apps/macos/ghostty/macos/Tests/: ColorizedGhosttyIconTests.swift  NSPasteboardTests.swift  NSScreenTests.swift
apps/macos/ghostty/nix/: devShell.nix  package.nix  tests.nix
apps/macos/ghostty/pkg/afl++/: build.zig
apps/macos/ghostty/pkg/apple-sdk/: build.zig
apps/macos/ghostty/pkg/dcimgui/: build.zig
apps/macos/ghostty/pkg/harfbuzz/: build.zig
apps/macos/ghostty/pkg/highway/: build.zig  build.zig.zon
apps/macos/ghostty/pkg/libpng/: build.zig
apps/macos/ghostty/pkg/macos/: animation.zig
apps/macos/ghostty/pkg/oniguruma/: build.zig
apps/macos/ghostty/pkg/simdutf/: build.zig
apps/macos/ghostty/pkg/utfcpp/: build.zig  build.zig.zon
apps/macos/ghostty/pkg/wuffs/: build.zig
apps/macos/ghostty/pkg/zlib/: build.zig
apps/macos/ghostty/po/: README_CONTRIBUTORS.md  README_TRANSLATORS.md  bg.po  ca.po  com.mitchellh.ghostty.pot  de.po  es_AR.po  es_BO.po  es_ES.po  fr.po  ga.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  ru.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
apps/macos/ghostty/snap/: snapcraft.yaml
apps/macos/ghostty/snap/local/: launcher
apps/macos/ghostty/src/: App.zig  Command.zig  Surface.zig  config.zig  lib_vt.zig  main_c.zig  main_ghostty.zig
apps/macos/ghostty/src/apprt/: embedded.zig  ipc.zig
apps/macos/ghostty/src/benchmark/: ScreenClone.zig  TerminalParser.zig  TerminalStream.zig  cli.zig  main.zig
apps/macos/ghostty/src/cli/: ghostty.zig  list_fonts.zig  ssh_cache.zig
apps/macos/ghostty/src/config/: CApi.zig  Config.zig
apps/macos/ghostty/src/datastruct/: split_tree.zig
apps/macos/ghostty/src/font/: CodepointResolver.zig  DeferredFace.zig  Metrics.zig  SharedGrid.zig  SharedGridSet.zig  backend.zig  discovery.zig  face.zig  library.zig  main.zig  nerd_font_attributes.zig  shape.zig
apps/macos/ghostty/src/input/: Binding.zig  function_keys.zig  key_encode.zig
apps/macos/ghostty/test/: README.md  ucs-detect.sh
apps/remuxd/: Cargo.toml
apps/remuxd/src/: main.rs
crates/remux-pty/: Cargo.toml
crates/remux-pty/src/: lib.rs
crates/remux-server/: Cargo.toml
crates/remux-server/src/: lib.rs
crates/remux-store/: Cargo.toml
crates/remux-store/src/: lib.rs
(+5444 files in other folders)
