[workspace]
members = [
  "apps/remuxd",
  "crates/remux-auth",
  "crates/remux-core",
  "crates/remux-inspect",
  "crates/remux-observe",
  "crates/remux-pty",
  "crates/remux-protocol",
  "crates/remux-server",
  "crates/remux-session",
  "crates/remux-store",
  "crates/remux-terminal",
]
exclude = [
  "native/zellij-bridge",
  "src/backend/zellij/plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yaoshenwang/remux"

[workspace.dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http1", "json", "macros", "tokio", "ws"] }
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive", "env"] }
futures-util = "0.3.31"
http-body-util = "0.1.3"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
vt100 = "0.16.2"
