[package]
name = "remux-pty"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
portable-pty.workspace = true
remux-core = { path = "../remux-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
