[package]
name = "remux-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
remux-core = { path = "../remux-core" }
remux-session = { path = "../remux-session" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
